# DespawnEngine

./: .gitignore  CMakeLists.txt  Cargo.toml  DOCUMENTATION.md  README.md  conanfile.py  settings.json5
assets/block/: air.json5  dirt.json5  engine.json5
assets/data/blocks/: dirt.json5  engine.json5
assets/models/blocks/: dirt.json5  engine.json5
assets/shaders/first_triangle/: fragment.glsl  vertex.glsl
assets/shaders/native_gui/: fragment.glsl  vertex.glsl
src/: arguments.rs  content.rs  engine.rs  main.cpp  main.rs  utils.rs
src/content/: block.rs  world.rs
src/content/block/: block.rs  block_registry.rs
src/content/world/: chunks.rs  world.rs
src/content/world/chunks/: chunk.rs  chunk_mesh.rs
src/engine/: core.rs  display.rs  egui_integration.rs  imgui_integration.rs  rendering.rs  resources.rs  scenes.rs  ui.rs  vswapchain.rs  vulkan.rs
src/engine/core/: app.rs  content_loader.rs  input.rs  user_settings.rs
src/engine/rendering/: camera.rs  cube.rs  descriptor_helpers.rs  display.rs  mvp.rs  texture_atlas.rs  vertex.rs  vswapchain.rs  vulkan.rs
src/engine/scenes/: handling.rs  scene_game.rs  scene_menu.rs
src/engine/scenes/handling/: scene_manager.rs  scene_trait.rs  scene_types.rs
src/engine/ui/: debug_ui.rs  egui_integration.rs  font_atlas.rs  native_gui.rs  native_gui_renderer.rs  native_gui_vertex.rs  square.rs  textbox.rs  ui_element.rs
src/utils/: math.rs  registry.rs
