[package]
name = "DespawnEngine"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
egui = { version = "0.31.1", features = ["default_fonts"] }
egui_plot = "0.32.1"
egui_winit_vulkano = "0.28.0"
glam = "0.30.4"
image = "0.25.6"
sysinfo = "0.36.0"
vulkano = { version = "0.35.1", features = ["macros"] }
vulkano-shaders = "0.35.0"
winit = "0.30.11"
bytemuck = "1.23.1"
fixedstr = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
serde_json5 = "0.2.1"
noise = "0.9.0"
rapidhash = "4.1.1"
foldhash = "0.1.5"
